--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -11,6 +11,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           # Last 100 commits should be enough for a PR
           fetch-depth: 100
+      - run: git log --oneline
       - name: Use Node.js 12
         uses: actions/setup-node@v1
         with:
@@ -19,3 +20,11 @@ jobs:
         run: |
           echo "::add-matcher::.github/workflows/commit-lint-problem-matcher.json"
           git log --oneline ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -v -e fixup -e squash | awk '{ print $1 }' |  xargs npx -q core-validate-commit --no-validate-metadata --tap
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          # Last 100 commits should be enough for a PR
+          fetch-depth: 100
+      - run: git log --oneline
