--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -3,7 +3,7 @@ name: "Commit messages adheres to guidelines at https://goo.gl/p2fr5Q"
 on: [pull_request]
 
 jobs:
-  lint-commit-message:
+  with-ref:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -12,15 +12,7 @@ jobs:
           # Last 100 commits should be enough for a PR
           fetch-depth: 100
       - run: git log --oneline
-      - name: Use Node.js 12
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Validate commit messages
-        run: |
-          echo "::add-matcher::.github/workflows/commit-lint-problem-matcher.json"
-          git log --oneline ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -v -e fixup -e squash | awk '{ print $1 }' |  xargs npx -q core-validate-commit --no-validate-metadata --tap
-  test:
+  without-ref:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
