--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: ${{ github.event.pull_request.commits }} + 1
+          fetch-depth: ${{ github.event.pull_request.commits + 1 }}
       - run: git log --oneline
   fetch-depth-no-plus-one:
     runs-on: ubuntu-latest
@@ -31,5 +31,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: ${{ github.event.pull_request.commits }} + 1
+          fetch-depth: ${{ github.event.pull_request.commits + 1 }}
       - run: git log --oneline
