--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -39,8 +39,9 @@ jobs:
         with:
           fetch-depth: ${{ steps.nb-of-commits.outputs.nb }}
       - run: git log --oneline
-  fetch-default:
+  fetch-2:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+          fetch-depth: 2
       - run: git log --oneline
