Can bash work here?

--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -14,13 +14,10 @@ jobs:
   fetch-depth-plus-one-with-ref:
     runs-on: ubuntu-latest
     steps:
-      - name: Compute ${{ github.event.pull_request.commits }} + 1
-        id: nb-of-commits
-        run: echo "::set-output name=nb::$((${{ github.event.pull_request.commits }} + 1))"
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: ${{ steps.nb-of-commits.outputs.nb }}
+          fetch-depth: $((${{ github.event.pull_request.commits }} + 1))
       - run: git log --oneline
   fetch-depth-no-plus-one:
     runs-on: ubuntu-latest
@@ -32,17 +29,7 @@ jobs:
   fetch-depth-plus-one:
     runs-on: ubuntu-latest
     steps:
-      - name: Compute ${{ github.event.pull_request.commits }} + 1
-        id: nb-of-commits
-        run: echo "::set-output name=nb::$((${{ github.event.pull_request.commits }} + 1))"
       - uses: actions/checkout@v2
         with:
-          fetch-depth: ${{ steps.nb-of-commits.outputs.nb }}
-      - run: git log --oneline
-  fetch-2:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
+          fetch-depth: $((${{ github.event.pull_request.commits }} + 1))
       - run: git log --oneline
